--- a/Display/TransportInfo.xaml
+++ b/Display/TransportInfo.xaml
@@ -38,15 +38,15 @@
                                 <RowDefinition Height="70"/>
                             </Grid.RowDefinitions>
                             <TextBlock Grid.Row="0" Grid.Column="0" Text="搬出日"/>
-                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding InProcessDate.Value,Converter={StaticResource DateTimeConverter}}"/>
+                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding inProcess.InProcessDate,Converter={StaticResource DateTimeConverter}}"/>
                             <TextBlock Grid.Row="1" Grid.Column="0" Text="品 番"/>
-                            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding ProductName.Value}" FontWeight="Bold"/>
+                            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding inProcess.ProductName}" FontWeight="Bold"/>
                             <TextBlock Grid.Row="2" Grid.Column="0" Text="ロット番号"/>
-                            <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding LotNumber.Value}"/>
+                            <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding inProcess.LotNumber}"/>
                             <TextBlock Grid.Row="3" Grid.Column="0" Text="重 量"/>
                             <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal"  >
-                                <TextBox x:Name="Amount" Text="{Binding Amount.Value}" Width="150"
-                                        materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" MaxLength="{Binding AmountLength.Value}">
+                                <TextBox x:Name="Amount" Text="{Binding inProcess.Amount}" Width="150"
+                                        materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed" MaxLength="{Binding AmountLength}">
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="GotFocus">
                                         <i:InvokeCommandAction Command="{Binding GotFocus}" CommandParameter="Amount"/>
@@ -59,7 +59,7 @@
                             <TextBlock Text="kg" FontSize="40" TextAlignment="Center" Margin="20,0,0,0"/>
                             </StackPanel>
                             <TextBlock Grid.Row="4" Grid.Column="0" Text="担当者"/>
-                            <TextBox Grid.Row="4" x:Name="Worker" Grid.Column="1" Text="{Binding Worker.Value}" HorizontalAlignment="Stretch" Margin="0,0,100,0"
+                            <TextBox Grid.Row="4" x:Name="Worker" Grid.Column="1" Text="{Binding inProcess.Worker}" HorizontalAlignment="Stretch" Margin="0,0,100,0"
                                      materialDesign:TextFieldAssist.CharacterCounterVisibility="Collapsed">
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="GotFocus">
@@ -73,10 +73,10 @@
                         </Grid>
                         <!-- 右領域 -->
                         <Grid Margin="20,0,0,0" Width="520" HorizontalAlignment="Left">
-                            <Grid  Visibility="{Binding VisibleTenKey.Value,Converter={StaticResource CollapsedConverter}}">
+                            <Grid  Visibility="{Binding VisibleTenKey.,Converter={StaticResource CollapsedConverter}}">
                                 <local:ControlTenKey/>
                             </Grid>
-                            <Grid Visibility="{Binding VisibleWorker.Value,Converter={StaticResource CollapsedConverter},FallbackValue=Collapsed}">
+                            <Grid Visibility="{Binding VisibleWorker,Converter={StaticResource CollapsedConverter},FallbackValue=Collapsed}">
                                 <local:ControlWorker/>
                             </Grid>
                         </Grid>
